<resources>
    <string name="app_name">Fleet TLC</string>
    <string name="app_privacy_policy">Privacy Policy</string>
    <string name="word_yes">Yes</string>
    <string name="word_no">No</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>
    <string name="btn_add">Add</string>
    <string name="btn_new">New</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_done">Done</string>
    <string name="btn_another">Another</string>
    <string name="btn_new_project">New Project</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_view">View</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_later">Later</string>
    <string name="btn_stop">Stop Showing</string>
    <string name="btn_change">Change Company</string>
    <string name="entry_hint_tech_code">code</string>
    <string name="entry_hint_notes">Add any notes here</string>
    <string name="entry_hint_skip_zip">Enter ZIP or hit NEXT</string>
    <string name="entry_hint_edit_project">Changing Existing Project:</string>
    <string name="entry_hint_truck">Can be just Truck Number\nor Truck Number : License Plate</string>
    <string name="entry_incomplete">Incomplete</string>
    <string name="entry_incomplete1">Incomplete %d</string>
    <string name="entry_incomplete2">Incomplete %d/%d</string>
    <string name="title_profile">Profile</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_debug">Debug</string>
    <string name="title_release">Release</string>
    <string name="title_upload">Upload</string>
    <string name="title_login">Login</string>
    <string name="title_save">Save</string>
    <string name="title_saved_">Saved:</string>
    <string name="title_secondary_login">Optional Secondary Login</string>
    <string name="title_root_project">Root Project</string>
    <string name="title_sub_project">Sub Project</string>
    <string name="title_sub_flows">Sub Flows</string>
    <string name="title_project_">Project:</string>
    <string name="title_state">State</string>
    <string name="title_city">City</string>
    <string name="title_company">Company</string>
    <string name="title_street">Street or Plant Name</string>
    <string name="title_address_">Address:</string>
    <string name="title_zipcode">ZIP</string>
    <string name="title_current_project">Current Project</string>
    <string name="title_truck">Truck</string>
    <string name="title_truck_">Truck:</string>
    <string name="title_equipment_installed">Equipment Installed</string>
    <string name="title_equipment_installed_">Equipment Installed:</string>
    <string name="title_equipment">Equipment</string>
    <string name="title_notes">Notes</string>
    <string name="title_notes_">Notes:</string>
    <string name="title_error">Error</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="title_confirm_checklist">Confirm Checklist</string>
    <string name="title_entries_">Entries:</string>
    <string name="title_uploaded_">Uploaded:</string>
    <string name="title_uploaded_done">Uploaded ALL</string>
    <string name="title_pictures_">Pictures: %d</string>
    <string name="title_status">Status</string>
    <string name="title_status_">Status:</string>
    <string name="title_truck_number_">Truck Number:</string>
    <string name="title_truck_damage_">Truck Damage:</string>
    <string name="title_activity_list_entries">Project Entries</string>
    <string name="title_elements">%d entries</string>
    <string name="title_element">one entry</string>
    <string name="title_photo">1 Photo</string>
    <string name="title_photos">%d of %d Photos</string>
    <string name="title_partial_install_reason">Reason:</string>
    <string name="prompt_custom_photo_1">Take one image for %s</string>
    <string name="prompt_custom_photo_N">Take %d images for %s</string>
    <string name="prompt_custom_photo_more">Take %d more images for %s</string>
    <string name="prompt_notes">Enter notes for %s</string>
    <string name="error_need_a_truck_number">Need a truck number</string>
    <string name="error_cannot_take_picture">Cannot take picture</string>
    <string name="error_while_loading_picture">Out of Memory</string>
    <string name="error_picture_removed">Picture removed</string>
    <string name="error_need_equipment">Need to select an equipment item</string>
    <string name="error_need_company">Need to select a company</string>
    <string name="error_need_new_company">Enter in a new company name</string>
    <string name="error_empty">No elements</string>
    <string name="error_incorrect_digit_count">Incorrect digit count for these fields:\n%s\nDo you want to continue?</string>
    <string name="error_incorrect_note_count">%1$d of %2$d digits found</string>
    <string name="error_need_status">Need to select a status</string>
    <string name="error_missing_truck_long">The following entry is missing a truck number. Would you like to correct or delete this entry?</string>
    <string name="error_missing_truck_short">Missing Truck</string>
    <string name="error_need_all_checked">All elements must be checked.</string>
    <string name="error_has_no_flows">Has no sub projects with flows.</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete this entry?</string>
    <string name="dialog_entry_done">Logged in as %s</string>
    <string name="dialog_entry_done2">Logged in as %1$s and %2$s</string>
    <string name="dialog_partial_install_title">Partial Install Reason</string>
    <string name="dialog_partial_install_body">What does this installation need to be completed?</string>
    <string name="dialog_debug_code">To flip to the %s server, enter the trigger word. This will completely wipe out all data and restart from scratch!</string>
    <string name="loading">LOADING&#8230;</string>
    <string name="picture_note_hint_generic">Enter note for picture</string>
    <string name="picture_note_hint_value">Enter value</string>
    <string name="picture_note_title">Picture Note</string>
    <string name="truck_number_request">Take picture of truck number and then enter it\'s value</string>
    <string name="truck_number_enter">Enter truck number in field below picture</string>
    <string name="truck_number_hint">Truck number</string>
    <string name="truck_damage_query">Is there any truck damage?</string>
    <string name="truck_damage_request">Take picture of truck damage and then describe it note field.</string>
    <string name="truck_damage_enter">Describe truck damage in field below picture</string>
    <string name="truck_damage_hint">Enter damage</string>
    <string name="picture_help_one">Take one more picture.</string>
    <string name="picture_help_multiple">Take %d more pictures.</string>
    <string name="picture_rotate_dialog_title">Always rotate?</string>
    <string name="picture_rotate_dialog_message">Automatically rotate pictures by %d degrees?</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_needs_repair">Needs Repair</string>
    <string name="status_complete">Complete</string>
    <string name="status_partial_install">Partial Install</string>
    <string name="status_installed_equipments">%1$d of %2$d equipments checked.</string>
    <string name="status_installed_pictures">%1$d pictures taken.</string>
    <string name="status_no_equipment">No equipment checked</string>
    <string name="status_notes_used">%d notes used.</string>
    <string name="perm_read_external_storage">Grant external read storage permission to help storage uploaded files.</string>
    <string name="perm_write_external_storage">Grant external write storage permission to help storage uploaded files.</string>
    <string name="perm_location">Grant location permission to help creating a new project easier.</string>
    <string name="confirm_title">Confirmation Checklist</string>
    <string name="confirm_question_1">Is the truck clean and trash picked up?</string>
    <string name="confirm_question_2">Are all screws and hardware installed?</string>
    <string name="confirm_question_3">Are all driver supplies returned to their original location?</string>
    <string name="confirm_question_4">IS THE KEY TURNED OFF?</string>
    <string name="confirm_question_5">Are the headlights and dome light turned off?</string>
    <string name="confirm_question_6">Do you have all your tools?</string>
    <string name="confirm_question_7">Did you remember to pick up trash around the truck?!!</string>
    <string name="vehicle_pending_dialog_title">Vehicle Inspecting List Pending</string>
    <string name="vehicle_pending_dialog_message">Still waiting to sync up with the server. Please come back later.</string>
    <string name="vehicle_required">Required</string>
    <string name="vehicle_comments">Comments</string>
    <string name="vehicle_title_vehicles">Fleet Vehicles</string>
    <string name="vehicle_title">Preventative Maintenance</string>
    <string name="vehicle_inspecting">What vehicle are you inspecting?</string>
    <string name="vehicle_type">Type of Inspection</string>
    <string name="vehicle_mileage">Current Mileage</string>
    <string name="vehicle_lights">Lights</string>
    <string name="vehicle_lights_description">Head/Tail/Brake Lights\nCheck the boxes when the item has been inspected\nAny issues with the exterior lights please write below.</string>
    <string name="vehicle_lights_head">Head Lights</string>
    <string name="vehicle_lights_tail">Tail Lights</string>
    <string name="vehicle_lights_exterior">Any issues with exterior lights?</string>
    <string name="vehicle_fluids">Fluids</string>
    <string name="vehicle_fluids_checks">Fluid Checks</string>
    <string name="vehicle_fluids_description">Check the boxes when the item has been inspected.\nAny issues with any fluids please write below.</string>
    <string name="vehicle_fluids_detected">Any fluids low or leaks detected?</string>
    <string name="vehicle_exterior">Exterior of Vehicle</string>
    <string name="vehicle_exterior_description">Please check exterios of Vehicle and note any NEW damage. Also inspect wiper blades, tires, and pressure.</string>
    <string name="vehicle_tire_inspection">Tire Inspection (including pressure, uneven wear)</string>
    <string name="vehicle_tire_damage">Any damage to vehicle exterior to include tires?</string>
    <string name="vehicle_other_title">Any other issues to report?</string>
    <string name="vehicle_other_description">Are there any other issues to report with the vehicle? (Shelf falling apart, strange noise or vibration at a certain speed, camera not working, cracked windshield?)</string>
    <string name="vehicle_submit">Submit</string>
    <string name="vehicle_none">@string/word_no</string>
    <string name="vehicle_yes">@string/word_yes</string>
    <string name="daar_title">Daily After Action Report</string>
    <string name="daar_sub_title">Please provide some details about the Team\'s work today. The more detail you put here, the less likely you will get a call asking questions :)</string>
    <string name="daar_instruction_date">What date is this for?</string>
    <string name="daar_instruction_project">What project are you on?</string>
    <string name="daar_entry_hint">Your answer</string>
    <string name="daar_select_recent">Recent</string>
    <string name="daar_select_all">All</string>
    <string name="daar_select_other">Describe</string>
    <string name="hours_title">Daily Hours Worked</string>
    <string name="hours_instruction_date">What date is this for?</string>
    <string name="hours_date_hint">Date</string>
    <string name="hours_time_start_hint">Start Time</string>
    <string name="hours_time_end_hint">End Time</string>
</resources>