<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fleet_daar"
        android:icon="@drawable/ic_noun_sunset"
        android:title="@string/daar_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fleet_hours"
        android:icon="@drawable/ic_baseline_hourglass_full_24"
        android:title="@string/hours_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/upload"
        android:icon="@drawable/icon_upload"
        android:title="@string/title_upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fleet_vehicles"
        android:icon="@drawable/ic_interstate_truck"
        android:title="@string/vehicle_title_vehicles"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/debug"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/title_debug"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/title_feedback"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacy"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/app_privacy_policy"
        app:showAsAction="ifRoom"/>

</menu>