<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content">

    <View android:id="@+id/top_separator"
          android:layout_height="2dp"
          android:layout_width="0dp"
          android:background="@android:color/white"
          android:layout_marginTop="3dp"
          android:layout_marginBottom="3dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"/>

    <CheckBox
        android:id="@+id/question_1"
        app:layout_constraintTop_toBottomOf="@id/top_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_question_1"
        style="@style/ConfirmQuestionText"/>

    <CheckBox
        android:id="@+id/question_2"
        app:layout_constraintTop_toBottomOf="@id/question_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_question_2"
        style="@style/ConfirmQuestionText"/>

    <CheckBox
        android:id="@+id/question_3"
        app:layout_constraintTop_toBottomOf="@id/question_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_question_3"
        style="@style/ConfirmQuestionText"/>

    <CheckBox
        android:id="@+id/question_4"
        app:layout_constraintTop_toBottomOf="@id/question_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_question_4"
        style="@style/ConfirmQuestionText"/>

    <CheckBox
        android:id="@+id/question_5"
        app:layout_constraintTop_toBottomOf="@id/question_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_question_5"
        style="@style/ConfirmQuestionText"/>

    <CheckBox
        android:id="@+id/question_6"
        app:layout_constraintTop_toBottomOf="@id/question_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_question_6"
        style="@style/ConfirmQuestionText"/>

    <CheckBox
        android:id="@+id/question_7"
        app:layout_constraintTop_toBottomOf="@id/question_6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_question_7"
        style="@style/ConfirmQuestionText"/>

    <View android:id="@+id/bottom_separator"
          android:layout_height="3dp"
          android:layout_width="0dp"
          android:background="@android:color/white"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          app:layout_constraintTop_toBottomOf="@id/question_7"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>