<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <com.cartlc.tracker.fresh.ui.title.TitleView
        android:id="@+id/frame_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/hours_instruction_date"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_title" />

    <Button
        android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="10dp"
        android:text="@string/hours_date_hint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction" />

    <Button
        android:id="@+id/timeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="10dp"
        android:text="@string/hours_time_start_hint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction" />

    <Button
        android:id="@+id/timeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="10dp"
        android:text="@string/hours_time_end_hint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeStart" />


    <RadioGroup
        android:id="@+id/projectSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction">

        <RadioButton
            android:id="@+id/projectRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:checked="true"
            android:text="@string/daar_select_recent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/projectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/daar_select_all"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/projectOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/daar_select_other"
            android:textSize="18sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/entry"
        style="@style/EntryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/daar_entry_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:isScrollContainer="true"
        android:maxLines="6"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@id/frame_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectSelect"
        app:layout_constraintVertical_bias="0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_shadow"
        android:elevation="3dp"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/frame_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectSelect" />

    <com.cartlc.tracker.fresh.ui.buttons.ButtonsView
        android:id="@+id/frame_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
