<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.cartlc.tracker.viewmodel.frag.ButtonsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.showing ? View.VISIBLE : View.GONE}">

        <Button
            android:id="@+id/btn_prev"
            style="@style/ControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.prevText}"
            android:textAllCaps="false"
            android:visibility="@{viewModel.showPrevButton ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_center"
            tools:text="@string/btn_prev"/>

        <Button
            android:id="@+id/btn_center"
            style="@style/ControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.centerText}"
            android:textAllCaps="false"
            android:visibility="@{viewModel.showCenterButton ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_prev"
            app:layout_constraintRight_toLeftOf="@id/btn_next"
            tools:text="@string/btn_add"/>

        <Button
            android:id="@+id/btn_next"
            style="@style/ControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.nextText}"
            android:textAllCaps="false"
            android:visibility="@{viewModel.showNextButton ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_center"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/btn_next"/>

        <Button
            android:id="@+id/change"
            style="@style/ControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_change"
            android:visibility="@{viewModel.showChangeButton ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/btn_center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>