<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/frame_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/main_title"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <RadioGroup
            android:id="@+id/status_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/status_complete"
                style="@style/StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStatusButtonClicked"
                android:text="@string/status_complete"/>

            <RadioButton
                android:id="@+id/status_partial"
                style="@style/StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStatusButtonClicked"
                android:text="@string/status_partial_install"/>

            <RadioButton
                android:id="@+id/status_needs_repair"
                style="@style/StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStatusButtonClicked"
                android:text="@string/status_needs_repair"/>
        </RadioGroup>

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
